# doory

./: Cargo.toml  README.md
doory-cli/: Cargo.toml
doory-cli/src/: main.rs
doory-core/: Cargo.toml  README.md
doory-core/src/: lib.rs
doory-keypad/: Cargo.toml  Makefile  README.md
doory-keypad/src/: main.rs
doory-reader/: Cargo.toml  Makefile  README.md
doory-reader/init/: doory-reader
doory-reader/src/: main.rs
doory-strikeplate/: Cargo.toml  Makefile  README.md
doory-strikeplate/init/: doory-strikeplate
doory-strikeplate/src/: main.rs
doory-vault/: .gitignore  README.md  docker-compose.yml
doory-vault/prod/: README.md  autossh-strikeplate.service  config.hcl  vault.service
doory-vault/tf/: main.tf
doory-xc/: Dockerfile  README.md  cargo.config
doory-xc/libnfc/: Makefile
