[package]
authors = ["eV <ev@7pr.xyz>"]
description = "A numeric keypad for an entry system using usbcdc"
keywords = [
    "no-std",
    "arm",
    "cortex-m",
    "stm32",
]
license = "GPL-3.0"
name = "doory-keypad"
version = "0.1.0"

[dependencies]
cortex-m-rtfm = "0.2.1"
cortex-m-semihosting = "0.2.0"
r0 = "0.2.1"

[dependencies.blue-pill]
git = "https://github.com/evq/blue-pill"

[dependencies.bluepill-usbcdc]
version = "0.1.0"

[dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.5"

[dependencies.nb]
git = "https://github.com/japaric/nb"

[dependencies.stm32f103xx]
features = ["rt"]
version = "0.7.2"
